# screenshot-tool

./: Makefile  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev-libs/include/pipewire/: version.h
src-tauri/dev-libs/pkgconfig/: libpipewire-0.3.pc  libspa-0.2.pc
src-tauri/src/: error.rs  image_processor.rs  lib.rs  main.rs  notification.rs
src-tauri/src/capture/: mod.rs  models.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/: contracts_integration.rs  notification_integration.rs
src/__tests__/: App.test.tsx
src/features/capture/: captureCommands.ts  index.ts  types.ts  useCaptureEvents.ts
src/features/capture/__tests__/: captureCommands.test.ts  types.contract.test.ts  useCaptureEvents.test.ts
src/features/layout/: index.ts
src/features/layout/__tests__/: AppShell.test.tsx  ContentArea.test.tsx  Titlebar.test.tsx
src/features/layout/components/: AppShell.tsx  ContentArea.tsx  Titlebar.tsx
src/features/overlay/: index.ts
src/features/overlay/__tests__/: FreezeFrameBackground.test.tsx  OverlayView.test.tsx  RegionSelector.test.tsx
src/features/overlay/components/: FreezeFrameBackground.tsx  OverlayView.tsx  RegionSelector.tsx
src/features/theme/: index.ts
src/features/theme/__tests__/: ThemeProvider.test.tsx  ThemeToggle.test.tsx  useTheme.test.tsx
src/styles/: globals.css
(+4 files in other folders)
