[package]
name = "screenshot-tool"
version = "0.1.0"
description = "A cross-platform screenshot tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenshot_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2.3.1"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3.6.1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
rand = "0.8"
xcap = "0.8.2"
tracing = "0.1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
